GameService notes for gahzi